# 587-AI-Syccophancy

./: .gitignore  README.md  TODO.md  analysis.ipynb  bert_main.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
database/queries/: Calculate_NTA_Ratios.sql
datasets/bert_score/: bertscore_divergences.csv
resources/: AnnotatedBibliography.md  ProjectProposal.md
src/: collect_responses.py  models.py  prompts.py  response_collection.py
src/analysis/: bert_score.py  data.py
src/db/: crud.py  database.py  models.py
tests/: conftest.py  test_db.py  test_main.py  test_models.py  test_response_collection.py
