[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "587-ai-syccophancy"
version = "0.1.0"
description = "Dependencies for DS 587 AI Sycophancy Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "google-genai>=1.70.0",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.setuptools.packages.find]
where = ["src"]
